--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
   <!-- Subject buttons grid -->
   <div class="subjects-grid">
-  <a href="pages/physics.html" class="subject-card animate__animated animate__fadeInUp"
+  <a href="pages/Physics.html" class="subject-card animate__animated animate__fadeInUp"
   style="animation-delay: 0.2s">
   <i class="fas fa-atom"></i>
   <span>Physics</span>
